--- a/app/build.gradle
+++ b/app/build.gradle
@@ -147,8 +147,8 @@ def loadVersionProperty() {
 
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "com.google.android.material:material:1.1.0"
+    implementation fileTree(dir: 'libs', include: ['*.jar','*.aar'])
+    implementation "com.google.android.material:material:1.2.0"
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'com.ashokvarma.android:bottom-navigation-bar:2.1.0'
     implementation project(path: ':mvvm_lib')
@@ -158,7 +158,7 @@ dependencies {
     }
     implementation 'com.gyf.immersionbar:immersionbar:3.0.0'
     implementation 'jp.wasabeef:recyclerview-animators:3.0.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.2'
     implementation 'com.google.android:flexbox:2.0.1'
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
