--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,12 +36,13 @@
         android:debuggable="false"
         android:icon="@mipmap/ic_icon"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:maxAspectRatio="2.4"
+        android:roundIcon="@mipmap/ic_icon_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="HardcodedDebugMode"
-        android:roundIcon="@mipmap/ic_icon_round"
         tools:replace="android:icon, android:theme,android:allowBackup">
         <activity
             android:name=".view.splash.PreviewWindow"
