不要再改东西了啊！！！！！！

--- a/version.properties
+++ b/version.properties
@@ -1,5 +1,5 @@
 #版本记录
-#3.1.0稳定版
-VERSION_CODE=8
-VERSION_NAME=3.3
-PATCH_BASE_CODE=app-0824-23-49-51
+#3.3.1 修改导航终点问题 人脸认证
+VERSION_CODE=9
+VERSION_NAME=3.3.1
+PATCH_BASE_CODE=app-0928-15-13-38
