--- a/version.properties
+++ b/version.properties
@@ -1,5 +1,10 @@
 #版本记录
 #3.3.1 修改导航终点问题 人脸认证
-VERSION_CODE=9
-VERSION_NAME=3.3.1
+#VERSION_CODE=9
+#VERSION_NAME=3.3.1
+#PATCH_BASE_CODE=app-0928-15-13-38
+
+#3.3.2 首页修改时间为人流量，增加投诉建议可上传视频
+VERSION_CODE=10
+VERSION_NAME=3.3.2
 PATCH_BASE_CODE=app-0928-15-13-38
