增加线路推荐中可进行导航

--- a/version.properties
+++ b/version.properties
@@ -5,6 +5,11 @@
 #PATCH_BASE_CODE=app-0928-15-13-38
 
 #3.3.2 首页修改时间为人流量，增加投诉建议可上传视频
-VERSION_CODE=10
-VERSION_NAME=3.3.2
+#VERSION_CODE=10
+#VERSION_NAME=3.3.2
+#PATCH_BASE_CODE=app-0928-15-13-38
+
+#3.3.3 修改投诉建议列表中可看视频，线路推荐中可进行导航
+VERSION_CODE=11
+VERSION_NAME=3.3.3
 PATCH_BASE_CODE=app-0928-15-13-38
