--- a/version.properties
+++ b/version.properties
@@ -10,6 +10,15 @@
 #PATCH_BASE_CODE=app-0928-15-13-38
 
 #3.3.3 修改投诉建议列表中可看视频，线路推荐中可进行导航
-VERSION_CODE=11
-VERSION_NAME=3.3.3
+#VERSION_CODE=11
+#VERSION_NAME=3.3.3
+#PATCH_BASE_CODE=app-1103-15-16-04
+#3.3.4 增加变更手机号功能，线路推荐增加按钮可回归到地图中心，分享功能统一为路线找茬分享，其他不分享
+#VERSION_CODE=12
+#VERSION_NAME=3.3.4
+#PATCH_BASE_CODE=app-1103-15-16-04
+
+#3.3.4 增加变更手机号功能，线路推荐增加按钮可回归到地图中心，分享功能统一为路线找茬分享，其他不分享
+VERSION_CODE=13
+VERSION_NAME=3.3.5
 PATCH_BASE_CODE=app-1103-15-16-04
