--- a/version.properties
+++ b/version.properties
@@ -1,24 +1,34 @@
 #版本记录
-#3.3.1 修改导航终点问题 人脸认证
+#3.3.1 release 修改导航终点问题 人脸认证
 #VERSION_CODE=9
 #VERSION_NAME=3.3.1
 #PATCH_BASE_CODE=app-0928-15-13-38
 
-#3.3.2 首页修改时间为人流量，增加投诉建议可上传视频
+#3.3.2 debug 首页修改时间为人流量，增加投诉建议可上传视频
 #VERSION_CODE=10
 #VERSION_NAME=3.3.2
 #PATCH_BASE_CODE=app-0928-15-13-38
 
-#3.3.3 修改投诉建议列表中可看视频，线路推荐中可进行导航
+#3.3.3 debug 修改投诉建议列表中可看视频，线路推荐中可进行导航
 #VERSION_CODE=11
 #VERSION_NAME=3.3.3
 #PATCH_BASE_CODE=app-1103-15-16-04
-#3.3.4 增加变更手机号功能，线路推荐增加按钮可回归到地图中心，分享功能统一为路线找茬分享，其他不分享
+#3.3.4  debug 增加变更手机号功能，线路推荐增加按钮可回归到地图中心，分享功能统一为路线找茬分享，其他不分享
 #VERSION_CODE=12
 #VERSION_NAME=3.3.4
 #PATCH_BASE_CODE=app-1103-15-16-04
 
-#3.3.4 增加变更手机号功能，线路推荐增加按钮可回归到地图中心，分享功能统一为路线找茬分享，其他不分享
-VERSION_CODE=13
-VERSION_NAME=3.3.5
-PATCH_BASE_CODE=app-1103-15-16-04
+#3.3.5  debug 增加变更手机号功能，线路推荐增加按钮可回归到地图中心，分享功能统一为路线找茬分享，其他不分享
+#VERSION_CODE=13
+#VERSION_NAME=3.3.5
+#PATCH_BASE_CODE=app-1103-15-16-04
+
+#3.4  release
+VERSION_CODE=14
+VERSION_NAME=3.4
+PATCH_BASE_CODE=app-1116-09-15-27
+
+#3.4.1 debug 游客中心推荐路线改为路线推荐 线中推荐中的地图和scrollView 滚动冲突解决
+#VERSION_CODE=15
+#VERSION_NAME=3.4.1
+#PATCH_BASE_CODE=app-1116-09-15-27
