修改机器人功能

--- a/version.properties
+++ b/version.properties
@@ -23,12 +23,14 @@
 #VERSION_NAME=3.3.5
 #PATCH_BASE_CODE=app-1103-15-16-04
 
-#3.4  release
-VERSION_CODE=14
-VERSION_NAME=3.4
+#3.4  release 游客中心推荐路线改为路线推荐 线中推荐中的地图和scrollView 滚动冲突解决
+#VERSION_CODE=14
+#VERSION_NAME=3.4
+#PATCH_BASE_CODE=app-1116-09-15-27
+
+#3.5 debug 微信登陆之后修改信息问题。男厕不显示数量
+VERSION_CODE=15
+VERSION_NAME=3.4.2
 PATCH_BASE_CODE=app-1116-09-15-27
 
-#3.4.1 debug 游客中心推荐路线改为路线推荐 线中推荐中的地图和scrollView 滚动冲突解决
-#VERSION_CODE=15
-#VERSION_NAME=3.4.1
-#PATCH_BASE_CODE=app-1116-09-15-27
+
