--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,16 +7,11 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> <!-- 这个权限用于访问GPS定位 -->
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <!-- 这个权限用于进行网络定位-->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <!-- 这个权限用于访问GPS定位-->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <!-- 这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位-->
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <!-- 这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位-->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- 这个权限用于进行网络定位 -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> <!-- 这个权限用于访问GPS定位 -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> <!-- 这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位 -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" /> <!-- 这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位 -->
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
@@ -24,14 +19,13 @@
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-    <!--录音权限-->
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" /> <!-- 录音权限 -->
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
 
     <application
-        android:name="com.stxx.wyhvisitorandroid.base.MyApplication"
+        android:name=".base.MyApplication"
         android:allowBackup="false"
         android:debuggable="false"
         android:icon="@mipmap/ic_icon"
@@ -44,6 +38,7 @@
         android:usesCleartextTraffic="true"
         tools:ignore="HardcodedDebugMode"
         tools:replace="android:icon, android:theme,android:allowBackup">
+        <activity android:name=".view.PushReceiveActivity"></activity>
         <activity
             android:name=".view.splash.PreviewWindow"
             android:theme="@style/AppStartLoadTranslucent">
@@ -62,15 +57,15 @@
         <activity android:name=".view.login.ForgetPasswordActivity" />
         <activity android:name=".view.login.RegisterActivity" />
         <activity android:name="com.huawei.hms.hmsscankit.ScanKitActivity" />
-
-        <activity android:name=".view.splash.MainActivity" />
-        <!-- 适配华为刘海屏 -->
+        <activity android:name=".view.splash.MainActivity" /> <!-- 适配华为刘海屏 -->
         <meta-data
             android:name="android.notch_support"
             android:value="true" /> <!-- 适配小米刘海屏 -->
-        <!-- <activity
+        <!--
+ <activity
              android:name=".view.ar.ArUnityActivity"
-             android:process=":neobearAR" />-->
+             android:process=":neobearAR" />
+        -->
         <activity android:name=".view.ar.WNaviGuideActivity" />
         <activity
             android:name=".view.login.LoginActivity"
@@ -82,7 +77,6 @@
         <meta-data
             android:name="notch.config"
             android:value="portrait|landscape" />
-
         <meta-data
             android:name="com.baidu.speech.APP_ID"
             android:value="19531893" />
@@ -94,13 +88,11 @@
             android:value="nUUGVMpCGlvHNTrvoV5yy8rjNHWuTONv" />
         <meta-data
             android:name="file_provider"
-            android:value="${FILE_PROVIDER}" />
-
-        <!--        <activity android:name="com.huawei.hms.hmsscankit.ScanKitActivity" />-->
-
-
-        <!-- 在AndroidManifest.xml中增加内核首次加载时优化Service声明；
-        该Service仅在TBS内核首次Dex加载时触发并执行dex2oat任务，任务完成后自动结束 -->
+            android:value="${FILE_PROVIDER}" /> <!-- <activity android:name="com.huawei.hms.hmsscankit.ScanKitActivity" /> -->
+        <!--
+ 在AndroidManifest.xml中增加内核首次加载时优化Service声明；
+        该Service仅在TBS内核首次Dex加载时触发并执行dex2oat任务，任务完成后自动结束
+        -->
         <service
             android:name="com.tencent.smtt.export.external.DexClassLoaderProviderService"
             android:exported="false"
@@ -132,29 +124,30 @@
             android:name=".service.DownLoadAppService"
             android:exported="false" />
 
-
         <receiver
             android:name=".service.PushMessageReceive"
             android:exported="false">
             <intent-filter>
                 <action android:name="cn.jpush.android.intent.RECEIVE_MESSAGE" />
+
                 <category android:name="${applicationId}" />
             </intent-filter>
         </receiver>
-        <receiver
+        <!--
+ <receiver
             android:name=".service.MyJPushMessageReceiver"
             android:enabled="true"
             android:exported="false">
             <intent-filter>
-                <action android:name="cn.jpush.android.intent.REGISTRATION" /> <!--Required  用户注册SDK的intent-->
-                <action android:name="cn.jpush.android.intent.MESSAGE_RECEIVED" /> <!--Required  用户接收SDK消息的intent-->
-                <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED" /> <!--Required  用户接收SDK通知栏信息的intent-->
-                <action android:name="cn.jpush.android.intent.NOTIFICATION_OPENED" /> <!--Required  用户打开自定义通知栏的intent-->
-                <action android:name="cn.jpush.android.intent.CONNECTION" /><!-- 接收网络变化 连接/断开 since 1.6.3 -->
+                <action android:name="cn.jpush.android.intent.REGISTRATION" /> &lt;!&ndash;Required  用户注册SDK的intent&ndash;&gt;
+                <action android:name="cn.jpush.android.intent.MESSAGE_RECEIVED" /> &lt;!&ndash;Required  用户接收SDK消息的intent&ndash;&gt;
+                <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED" /> &lt;!&ndash;Required  用户接收SDK通知栏信息的intent&ndash;&gt;
+                <action android:name="cn.jpush.android.intent.NOTIFICATION_OPENED" /> &lt;!&ndash;Required  用户打开自定义通知栏的intent&ndash;&gt;
+                <action android:name="cn.jpush.android.intent.CONNECTION" />&lt;!&ndash; 接收网络变化 连接/断开 since 1.6.3 &ndash;&gt;
                 <category android:name="${applicationId}" />
             </intent-filter>
         </receiver>
-
+        -->
         <service
             android:name=".service.MyPushService"
             android:exported="false"
@@ -162,8 +155,7 @@
             <intent-filter>
                 <action android:name="cn.jiguang.user.service.action" />
             </intent-filter>
-        </service>
-        <!-- Required SDK核心功能-->
+        </service> <!-- Required SDK核心功能 -->
         <activity
             android:name="cn.jpush.android.ui.PushActivity"
             android:configChanges="orientation|keyboardHidden"
@@ -201,6 +193,6 @@
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
-
     </application>
+
 </manifest>
