--- a/version.properties
+++ b/version.properties
@@ -29,8 +29,12 @@
 #PATCH_BASE_CODE=app-1116-09-15-27
 
 #3.5 debug 微信登陆之后修改信息问题。男厕不显示数量
-VERSION_CODE=15
-VERSION_NAME=3.4.2
+#VERSION_CODE=15
+#VERSION_NAME=3.4.2
+#PATCH_BASE_CODE=app-1116-09-15-27
+#增加推送消息
+VERSION_CODE=16
+VERSION_NAME=3.5
 PATCH_BASE_CODE=app-1116-09-15-27
 
 
