--- a/version.properties
+++ b/version.properties
@@ -33,8 +33,13 @@
 #VERSION_NAME=3.4.2
 #PATCH_BASE_CODE=app-1116-09-15-27
 #增加推送消息
-VERSION_CODE=16
-VERSION_NAME=3.5
-PATCH_BASE_CODE=app-1231-14-11-36
+#VERSION_CODE=16
+#VERSION_NAME=3.5
+#PATCH_BASE_CODE=app-1231-14-11-36
+
+#修改addGeoFence("温榆河公园")
+VERSION_CODE=17
+VERSION_NAME=3.5.1
+PATCH_BASE_CODE=app-0408-16-30-01
 
 
