替换引导页图片

--- a/version.properties
+++ b/version.properties
@@ -47,8 +47,12 @@
 #VERSION_NAME=3.6.1
 #PATCH_BASE_CODE=app-0910-11-12-06
 # 2022/01/17增加隐私协议和注销帐号功能
-VERSION_CODE=23
-VERSION_NAME=3.7.1
-PATCH_BASE_CODE=app-0118-09-07-59
+#VERSION_CODE=23
+#VERSION_NAME=3.7.1
+#PATCH_BASE_CODE=app-0118-09-07-59
+#更换启动页图片
+VERSION_CODE=24
+VERSION_NAME=3.7.2
+PATCH_BASE_CODE=app-0124-13-19-38
 
 
