修改客服链接

--- a/version.properties
+++ b/version.properties
@@ -16,7 +16,7 @@
 #VERSION_CODE=24
 #VERSION_NAME=3.7.2
 #PATCH_BASE_CODE=app-0124-13-19-38
-# 修改更新弹窗机制
+# 修改更新弹窗机制 2-22热更新一次修改客服链接
 VERSION_CODE=25
 VERSION_NAME=3.7.3
 PATCH_BASE_CODE=app-0128-14-50-19
