增加地图清除缓存功能

--- a/version.properties
+++ b/version.properties
@@ -20,6 +20,7 @@
 #VERSION_CODE=25
 #VERSION_NAME=3.7.3
 #PATCH_BASE_CODE=app-0128-14-50-19
+# 增加更新map瓦片图时清除缓存功能
 VERSION_CODE=26
 VERSION_NAME=3.7.4
 PATCH_BASE_CODE=app-0505-17-47-36
