--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,8 @@ android {
         targetSdkVersion dc.targetSdkVersion
         versionCode Integer.parseInt(version[0])
         versionName version[1]
-        ndk { abiFilters "armeabi-v7a", "armeabi" }
+        //, "arm64-v8a"
+        ndk { abiFilters "armeabi-v7a" ,"armeabi"}
         /*  externalNativeBuild {
               cmake {
                   cppFlags "-fexceptions"
@@ -156,7 +157,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.12'
-    implementation "com.google.android.material:material:1.2.0"
+    implementation "com.google.android.material:material:1.4.0"
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'com.ashokvarma.android:bottom-navigation-bar:2.1.0'
     implementation project(path: ':mvvm_lib')
@@ -176,13 +177,13 @@ dependencies {
     implementation 'q.rorbin:badgeview:1.1.3'
     implementation 'com.github.lvtanxi:BaseVLayoutAdapterHelper:1.0.2'
     implementation 'cn.bingoogolapple:bga-banner:3.0.0@aar'
-    implementation 'com.huawei.hms:scan:1.1.3.300'
+    implementation 'com.huawei.hms:scan:2.3.0.300'
     implementation 'com.haibin:calendarview:3.6.7'
     implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.5.1'
-    implementation 'com.tencent.tbs.tbssdk:sdk:43903'
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.tencent.tbs:tbssdk:44216'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-    implementation 'com.tencent.bugly:crashreport_upgrade:1.4.5'
+    implementation 'com.tencent.bugly:crashreport_upgrade:1.6.1'
     implementation 'com.tencent.tinker:tinker-android-lib:1.9.14'
     implementation "com.android.support:multidex:1.0.3"
     implementation 'com.github.promeg:tinypinyin:2.0.3'
@@ -199,4 +200,11 @@ dependencies {
 
     implementation "com.umeng.umsdk:common:9.4.2"
     implementation "com.umeng.umsdk:asms:1.4.1" // asms包依赖(必选)
+
+//    implementation 'com.baidu.lbsyun:BaiduMapSDK_Location_All:9.3.3'
+//    implementation 'com.baidu.lbsyun:BaiduMapSDK_Map-BWNavi:7.4.0'
+//    implementation 'com.baidu.lbsyun:BaiduMapSDK_Search:7.4.0'
+//    implementation 'com.baidu.lbsyun:BaiduMapSDK_Util:7.4.0'
+
+
 }
