增加权限申请提示 登录默认不勾选协议

--- a/WYH20.03.30/build.gradle
+++ b/WYH20.03.30/build.gradle
@@ -35,9 +35,7 @@ android {
 	defaultConfig {
 		minSdkVersion 19
 		targetSdkVersion 26
-		ndk {
-            abiFilters 'armeabi-v7a'
-        }
+		ndk { abiFilters "armeabi-v7a"}
 		versionCode	1
 		versionName	'1.0'
 	}
