--- a/version.properties
+++ b/version.properties
@@ -21,8 +21,12 @@
 #VERSION_NAME=3.7.3
 #PATCH_BASE_CODE=app-0128-14-50-19
 # 增加更新map瓦片图时清除缓存功能
-VERSION_CODE=26
-VERSION_NAME=3.7.4
-PATCH_BASE_CODE=app-0505-17-47-36
+#VERSION_CODE=26
+#VERSION_NAME=3.7.4
+#PATCH_BASE_CODE=app-0505-17-47-36
+
+VERSION_CODE=377
+VERSION_NAME=3.7.7
+PATCH_BASE_CODE=app-0919-14-27-27
 
 
