--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> <!-- 这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位 -->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" /> <!-- 这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位 -->
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-    <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_LOGS" />
@@ -34,8 +33,10 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:maxAspectRatio="2.4"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_icon"
         android:supportsRtl="true"
+        android:taskAffinity=""
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="HardcodedDebugMode"
@@ -51,15 +52,28 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.splash.SplashActivity" />
+        <activity
+            android:name=".view.splash.SplashActivity"
+            android:exported="false" />
         <activity
             android:name=".view.splash.MultiFragments"
+            android:exported="false"
             android:launchMode="singleTop" />
-        <activity android:name=".view.splash.GuideActivity" />
-        <activity android:name=".view.login.ForgetPasswordActivity" />
-        <activity android:name=".view.login.RegisterActivity" />
-        <activity android:name="com.huawei.hms.hmsscankit.ScanKitActivity" />
-        <activity android:name=".view.splash.MainActivity" /> <!-- 适配华为刘海屏 -->
+        <activity
+            android:name=".view.splash.GuideActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.login.ForgetPasswordActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.login.RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name="com.huawei.hms.hmsscankit.ScanKitActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.splash.MainActivity"
+            android:exported="false" /> <!-- 适配华为刘海屏 -->
         <activity
             android:name="com.tencent.bugly.beta.ui.BetaActivity"
             android:configChanges="keyboardHidden|orientation|screenSize|locale"
@@ -72,9 +86,12 @@
              android:name=".view.ar.ArUnityActivity"
              android:process=":neobearAR" />
         -->
-        <activity android:name=".view.ar.WNaviGuideActivity" />
+        <activity
+            android:name=".view.ar.WNaviGuideActivity"
+            android:exported="false" />
         <activity
             android:name=".view.login.LoginActivity"
+            android:exported="false"
             android:launchMode="singleTop" />
 
         <meta-data
@@ -116,7 +133,14 @@
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths_public" />
-        </provider> <!-- 百度 -->
+        </provider>
+        <provider
+            android:name="cn.jpush.android.service.DownloadProvider"
+            android:authorities="com.stxx.wyhvisitorandroid.DownloadProvider"
+            android:exported="false"
+            tools:replace="android:exported" />
+
+        <!-- 百度 -->
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="W4H20P7Bnk4YBT9s1rPSnERLaVgHyS75" />
@@ -180,9 +204,12 @@
                 <category android:name="${applicationId}" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.splash.DisPlayActivity" />
+        <activity
+            android:name=".view.splash.DisPlayActivity"
+            android:exported="false" />
         <activity
             android:name=".view.mine.UserInfoFragment"
+            android:exported="false"
             android:launchMode="singleTask" />
         <activity
             android:name=".wxapi.WXEntryActivity"
@@ -193,14 +220,17 @@
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity
             android:name=".view.ar.BdNavGuideActivity"
+            android:exported="false"
             android:launchMode="singleTop"
             android:screenOrientation="portrait" />
         <activity
             android:name=".view.splash.WxLoginBindPhoneActivity"
+            android:exported="false"
             android:launchMode="singleTop"
             android:screenOrientation="portrait" />
         <activity
             android:name=".view.webview.WebViewActivity"
+            android:exported="false"
             android:launchMode="singleTop"
             android:screenOrientation="portrait" />
 
