--- a/version.properties
+++ b/version.properties
@@ -24,9 +24,12 @@
 #VERSION_CODE=26
 #VERSION_NAME=3.7.4
 #PATCH_BASE_CODE=app-0505-17-47-36
-
-VERSION_CODE=377
-VERSION_NAME=3.7.7
+#VERSION_CODE=377
+#VERSION_NAME=3.7.7
+#PATCH_BASE_CODE=app-0919-14-27-27
+#增加热力图
+VERSION_CODE=378
+VERSION_NAME=3.7.8
 PATCH_BASE_CODE=app-0919-14-27-27
 
 
